Added some new files and the folders

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         <hr>
         <form action="" id="todo-input">
             <input class="input" type="text" max="255" min="5" required placeholder="Add your list...">
+            <small class="emptylist"> You cannot save an empyt todo </small>
             <i class="material-icons">&#xe31b</i>
 
         </form>
