Made changes to the new files

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="todo-list">
 
         </div>
-        <div class="clear">
+        <div id="clear-complete">
             <p>Clear All completed</p>
         </div>   
     </div>
