--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <title>Todo List</title>
 </head>
 <body class="bg-info">
-   <section class="todolist d-flex justify-content-center align-items-center h-80 mt-5">
-    <div class="list-container bg-light w-100">
+   <section class="todolist d-flex justify-content-center align-items-center">
+    <div class="list-container bg-light ">
         <h2 class="heading border-bottom border-secondary py-3">Today's Todo  <span class="refresh"></span></h2>
         <div class="list-group border-bottom border-secondary py-3 text-lg font-normal">
             <input type="text" class="save-todo form-control text-lg w-100 font-italic " id="enter-todo" placeholder="Add to your list...">
