Make changes to the README.md file

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Todo List</title>
 </head>
 <body class="bg-info">
-   <section class="todolist d-flex justify-content-center align-items-center">
+   <section class="todolist d-flex justify-content-center align-items-center mt-5">
     <div class="list-container bg-light ">
         <h2 class="heading border-bottom border-secondary py-3">Today's Todo  <span class="refresh"></span></h2>
         <div class="list-group border-bottom border-secondary py-3 text-lg font-normal">
