Made new changes

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <title>Todo List</title>
 </head>
 <body class="bg-info">
-   <section class="todolist d-flex justify-content-center align-items-center mt-5">
-    <div class="list-container bg-light ">
-        <h2 class="heading border-bottom border-secondary py-3">Today's Todo  <span class="refresh"></span></h2>
+   <section class="todolist d-flex justify-content-center align-items-center mt-5 ">
+    <div class="list-container bg-light col-sm-4 col-md-6 col-lg-8 ">
+        <h2 class="heading border-bottom border-secondary py-3 m-1">Today's Todo  <span class="refresh"></span></h2>
         <div class="list-group border-bottom border-secondary py-3 text-lg font-normal">
             <input type="text" class="save-todo form-control text-lg w-100 font-italic " id="enter-todo" placeholder="Add to your list...">
             <small class="emptylist text-danger">You can not save an empty todo</small>
