--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,18 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Todo List</title>
 </head>
-<body class="bg-info">
-   <section class="todolist d-flex justify-content-center align-items-center mt-5">
-    <div class="list-container bg-light ">
-        <h2 class="heading border-bottom border-secondary py-3">Today's Todo  <span class="refresh"></span></h2>
-        <div class="list-group border-bottom border-secondary py-3 text-lg font-normal">
-            <input type="text" class="save-todo form-control text-lg w-100 font-italic " id="enter-todo" placeholder="Add to your list...">
-            <small class="emptylist text-danger">You can not save an empty todo</small>
+<body>
+   <section class="todolist">
+    <div class="list-container ">
+        <h2 class="heading ">Today's Todo  <span class="refresh"></span></h2>
+        <div class="list-group">
+            <input type="text" class="save-todo form-control " id="enter-todo" placeholder="Add to your list...">
+            <small class="emptylist ">You can not save an empty todo</small>
         </div>
         <div class="todo-list">
 
         </div>
-        <div id="clear-complete" class="bg-success text-white py-2 d-flex justify-content-center cursor-pointer">
+        <div id="clear-complete" class="clear-complete">
             <p>Clear All completed</p>
         </div>   
     </div>
